--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "typescript": "^4.7.3"
   },
   "dependencies": {
-    "node_characterai": "^1.1.3"
+    "node_characterai": "^1.1.3",
+    "puppeteer-extra-plugin-stealth": "^2.11.2"
   }
 }
