--- a/package.json
+++ b/package.json
@@ -10,5 +10,8 @@
   "dependencies": {
     "node_characterai": "^1.1.3",
     "puppeteer-extra-plugin-stealth": "^2.11.2"
+  },
+  "pkg": {
+    "assets": "node_modules/puppeteer-extra-plugin-stealth/**/."
   }
 }
