--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "puppeteer-extra-plugin-stealth": "^2.11.2",
     "puppeteer-extra-plugin-user-data-dir": "^2.4.1",
     "puppeteer-extra-plugin-user-preferences": "^2.4.1"
+  },
+  "scripts":{
+    "vercel-build": "node node_modules/puppeteer/install.js"
   }
 }
