验证一下可行性

--- a/package.json
+++ b/package.json
@@ -18,5 +18,7 @@
   "scripts": {
     "vercel-build": "node node_modules/puppeteer/install.js"
   },
-  "puppeteer": "puppeteer.config.cjs"
+  "puppeteer": {
+    "cacheDirectory": "/vercel/path0/.cache/puppeteer'"
+  }
 }
