--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "typescript": "^4.7.3"
   },
   "dependencies": {
-    "puppeteer": "^19.10.1",
+    "chrome-aws-lambda": "^10.1.0",
     "node_characterai": "^1.1.3",
-    
+    "puppeteer": "^19.10.1",
     "puppeteer-extra-plugin-stealth": "^2.11.2",
     "puppeteer-extra-plugin-user-data-dir": "^2.4.1",
     "puppeteer-extra-plugin-user-preferences": "^2.4.1"
