验证一下可行性

--- a/package.json
+++ b/package.json
@@ -19,6 +19,6 @@
     "vercel-build": "node node_modules/puppeteer/install.js"
   },
   "puppeteer": {
-    "cacheDirectory": "/vercel/path0/.cache/puppeteer'"
+    "cacheDirectory": "/home/sbx_user1051/.cache/puppeteer"
   }
 }
